# jpeg2000

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
assets/: leleccum.txt  lena.bmp.tar.bz2  lenaMiddleLine.txt
include/: Readme.txt  Signal1D.hpp  Signal2D.hpp  SignalException.hpp  assets.hpp  bitmap.hpp  decompose.hpp  decompose2D.hpp  decomposeAMR.hpp  decomposeHaar.hpp  decomposeLifting.hpp  filters.hpp  quantlm.hpp  statistics.hpp  test.hpp
src/: Signal1D.cpp  Signal2D.cpp  bitmap.cpp  decompose.cpp  decompose2D.cpp  decomposeAMR.cpp  decomposeHaar.cpp  decomposeLifting.cpp  filters.cpp  quantlm.cpp  statistics.cpp  test.cpp
